springbootHazelcast/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo
    spec:
      #serviceAccount: my-cluster-hazelcast-enterprise
      containers:
      - image: amoahcp/hztest
        name: demo
        resources: {}
status: {}
