springbootHazelcast/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: demo
    servicePort: 8080
